--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/navigation_dashboard"
+        android:id="@+id/navigation_settings"
         android:icon="@drawable/ic_settings_24"
         android:title="@string/title_settings_tab" />
 
     <item
-        android:id="@+id/navigation_home"
+        android:id="@+id/navigation_main"
         android:icon="@drawable/ic_recording_24"
         android:title="@string/title_main_tab" />
 
     <item
-        android:id="@+id/navigation_notifications"
+        android:id="@+id/navigation_records"
         android:icon="@drawable/ic_recording_tape"
         android:title="@string/title_records_tab" />
 </menu>
