--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -1,25 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<navigation xmlns:android="http://schemas.android.com/apk/res/android"
+    <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/navigation_home">
+    app:startDestination="@+id/navigation_main">
 
     <fragment
-        android:id="@+id/navigation_home"
-        android:name="com.wingsmight.audiorecorder.ui.main.HomeFragment"
+        android:id="@+id/navigation_main"
+        android:name="com.wingsmight.audiorecorder.ui.main.MainFragment"
         android:label="@string/title_main_tab"
         tools:layout="@layout/fragment_main" />
 
     <fragment
-        android:id="@+id/navigation_dashboard"
-        android:name="com.wingsmight.audiorecorder.ui.settings.DashboardFragment"
+        android:id="@+id/navigation_settings"
+        android:name="com.wingsmight.audiorecorder.ui.settings.SettingsFragment"
         android:label="@string/title_settings_tab"
         tools:layout="@layout/fragment_settings" />
 
     <fragment
-        android:id="@+id/navigation_notifications"
-        android:name="com.wingsmight.audiorecorder.ui.records.NotificationsFragment"
+        android:id="@+id/navigation_records"
+        android:name="com.wingsmight.audiorecorder.ui.records.RecordsFragment"
         android:label="@string/title_records_tab"
         tools:layout="@layout/fragment_records" />
+    <fragment
+        android:id="@+id/settingsFragment"
+        android:name="com.wingsmight.audiorecorder.ui.settings.SettingsPreferencesFragment"
+        android:label="SettingsFragment" />
 </navigation>
