implement logout button

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="darkGreen">#35C75A</color>
     <color name="lightGreen">#59D678</color>
+    <color name="softRed">#CC2121</color>
 </resources>
