--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="gray">#9E9E9E</color>
     <color name="darkGreen">#35C75A</color>
     <color name="lightGreen">#59D678</color>
     <color name="softRed">#FD463A</color>
