--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,22 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.main.MainFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".ui.main.MainFragment"
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/text_home"
-        android:layout_width="match_parent"
+    <View
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_weight="1"
+        />
+
+    <FrameLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="0"
+        android:layout_gravity="center"
+        >
+
+        <View
+            android:id="@+id/volumeRound1"
+            android:layout_width="220dp"
+            android:layout_height="220dp"
+            android:background="@drawable/round_button"
+            android:gravity="center_vertical|center_horizontal"
+            android:backgroundTint="@color/lightGreen"
+            android:layout_gravity="center"
+            android:alpha="0.5"
+            android:visibility="invisible"
+            />
+        <View
+            android:id="@+id/volumeRound0"
+            android:layout_width="180dp"
+            android:layout_height="180dp"
+            android:background="@drawable/round_button"
+            android:gravity="center_vertical|center_horizontal"
+            android:backgroundTint="@color/lightGreen"
+            android:layout_gravity="center"
+            android:alpha="0.5"
+            android:visibility="invisible"
+            />
+        <ImageButton
+            android:id="@+id/switchRecordButton"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:background="@drawable/round_button"
+            android:gravity="center_vertical|center_horizontal"
+            android:layout_gravity="center"
+            android:backgroundTint="@color/lightGreen"
+            android:src="@drawable/ic_play_arrow_24"
+            android:scaleType="fitCenter"
+            android:layout_margin="10dp"
+            android:padding="10dp"
+            />
+
+    </FrameLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:padding="50dp"
+        >
+        <TextView
+            android:id="@+id/timer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="5:00:10"
+            android:textAlignment="center"
+            android:textSize="45dp"
+            android:fontFamily="monospace"
+            android:textColor="@color/gray"
+            android:visibility="invisible"
+            />
+    </LinearLayout>
+
+
+</LinearLayout>
