--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,6 +5,8 @@
         <item name="colorPrimary">@color/darkGreen</item>
         <item name="colorPrimaryVariant">@color/lightGreen</item>
         <item name="colorOnPrimary">@color/white</item>
+        <item name="colorAccent">@color/darkGreen</item>
+
         <!-- Secondary brand color. -->
         <!--        <item name="colorSecondary">@color/teal_200</item>-->
         <!--        <item name="colorSecondaryVariant">@color/teal_700</item>-->
