--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,22 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.main.MainFragment"
-    android:orientation="vertical">
-
-    <View
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        />
+    >
 
     <FrameLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="0"
+        android:layout_centerInParent="true"
         android:layout_gravity="center"
         >
 
@@ -55,24 +49,18 @@
 
     </FrameLayout>
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/timer"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:padding="50dp"
-        >
-        <TextView
-            android:id="@+id/timer"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="5:00:10"
-            android:textAlignment="center"
-            android:textSize="45dp"
-            android:fontFamily="monospace"
-            android:textColor="@color/gray"
-            android:visibility="invisible"
-            />
-    </LinearLayout>
+        android:layout_height="wrap_content"
+        android:text="5:00:10"
+        android:textAlignment="center"
+        android:textSize="45dp"
+        android:fontFamily="monospace"
+        android:textColor="@color/gray"
+        android:visibility="invisible"
+        android:layout_alignParentBottom="true"
+        android:paddingBottom="150dp"
+        />
 
-
-</LinearLayout>
+</RelativeLayout>
