--- a/app/src/main/res/layout/record.xml
+++ b/app/src/main/res/layout/record.xml
@@ -60,17 +60,19 @@
         android:orientation="vertical"
         >
 
-        <com.google.android.material.slider.Slider
+        <SeekBar
             android:id="@+id/playerTimeSlider"
+            style="@android:style/Widget.Material.Light.ProgressBar.Horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/activity_horizontal_margin"
             android:layout_marginEnd="@dimen/activity_horizontal_margin"
-            android:valueFrom="0.0"
-            android:valueTo="100.0"
-            android:value="50.0"
-            style="@style/Widget.App.Slider"
-            app:thumbColor="@color/darkDarkGray"
+            android:thumbTint="@color/darkDarkGray"
+            android:progressBackgroundTint="@color/gray"
+            android:progressTint="@color/darkGray"
+            android:min="0"
+            android:max="100"
+            android:progress="50"
             />
 
         <RelativeLayout
@@ -82,6 +84,7 @@
             >
 
             <TextView
+                android:id="@+id/currentPlaybackTime"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
@@ -89,6 +92,7 @@
                 />
 
             <TextView
+                android:id="@+id/remainingPlaybackTime"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
