--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -43,6 +43,7 @@
             app:key="recordByVoice"
             app:title="Включение записи по голосу"
             app:iconSpaceReserved="false"
+            app:defaultValue="true"
             />
 
     </PreferenceCategory>
