add Share record button

--- a/app/src/main/res/layout/record.xml
+++ b/app/src/main/res/layout/record.xml
@@ -183,6 +183,7 @@
                 />
 
             <ImageButton
+                android:id="@+id/shareRecordButton"
                 android:layout_width="35dp"
                 android:layout_height="35dp"
                 android:layout_alignParentEnd="true"
