--- a/app/src/main/res/layout/do_not_disturb_button.xml
+++ b/app/src/main/res/layout/do_not_disturb_button.xml
@@ -10,7 +10,7 @@
         android:id="@android:id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/black"
+        android:textColor="@android:color/tab_indicator_text"
         android:padding="@dimen/activity_horizontal_margin"
         android:textSize="16dp"
         android:onClick="setDoNotDisturbInterval"
