--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -44,6 +44,7 @@
             android:layout_width="250dp"
             android:layout_height="250dp"
             style="?android:attr/progressBarStyleLarge"
+            android:backgroundTint="@android:color/transparent"
             android:visibility="visible"
             />
 
