--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,16 +1,43 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Theme.AudioRecorder" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/darkGreen</item>
-        <item name="colorPrimaryVariant">@color/lightGreen</item>
-        <item name="colorOnPrimary">@color/black</item>
-        <!-- Secondary brand color. -->
-<!--        <item name="colorSecondary">@color/teal_200</item>-->
-<!--        <item name="colorSecondaryVariant">@color/teal_200</item>-->
-        <item name="colorOnSecondary">@color/black</item>
-        <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here. -->
-    </style>
+<!-- Base application theme. -->
+<style name="Theme.AudioRecorder" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <!-- Primary brand color. -->
+    <item name="colorAccent">@color/darkGreen</item>
+    <item name="colorPrimary">@color/darkGreen</item>
+    <item name="colorPrimaryVariant">@color/lightGreen</item>
+    <item name="colorOnPrimary">@color/white</item>
+    <item name="android:background">@color/black</item>
+    <!-- Secondary brand color. -->
+    <!--        <item name="colorSecondary">@color/teal_200</item>-->
+    <!--        <item name="colorSecondaryVariant">@color/teal_200</item>-->
+    <item name="colorOnSecondary">@color/darkGray</item>
+    <!-- Status bar color. -->
+    <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+    <!-- Preference -->
+    <item name="preferenceTheme">@style/PreferenceThemeOverlay.v14.Material</item>
+
+    <!-- Customize your theme here. -->
+    <item name="android:buttonStyle">@style/Widget.AppCompat.Button.Colored</item>
+
+</style>
+
+<style name="Theme.AudioRecorder.NoActionBar">
+    <item name="windowActionBar">false</item>
+    <item name="windowNoTitle">true</item>
+</style>
+
+<style name="Theme.AudioRecorder.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+<style name="Theme.AudioRecorder.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+<style name="Widget.App.Slider" parent="Widget.MaterialComponents.Slider">
+    <item name="materialThemeOverlay">@style/ThemeOverlay.App.Slider</item>
+</style>
+
+<style name="ThemeOverlay.App.Slider" parent="">
+    <item name="colorPrimary">@color/darkGray</item>
+    <item name="colorOnPrimary">@color/gray</item>
+    <item name="colorOnSurface">@color/darkGray</item>
+</style>
+
 </resources>
