--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="lightGreen">#59D678</color>
     <color name="softRed">#FD463A</color>
     <color name="softBlue">#1070D6</color>
+    <color name="transparent">#00FFFFFF</color>
 </resources>
