--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -62,6 +62,7 @@
         android:visibility="invisible"
         android:layout_alignParentBottom="true"
         android:paddingBottom="150dp"
+        android:backgroundTint="@color/transparent"
         />
 
 </RelativeLayout>
